# traccc

./: .gitignore  CMakeLists.txt  compile_commands.json
core/include/algorithms/detail/: sparse_ccl_sycl.hpp
core/include/edm/: sycl_gpu_module.hpp
debug/: CMakeLists.txt  README.md
debug/sparse_ccl/: CMakeLists.txt  data_generation.py  sparse_ccl_debug.cpp
device/sycl/: CMakeLists.txt
device/sycl/include/sycl/helloworld/: CMakeLists.txt  helloworld.hpp
device/sycl/src/helloworld/: helloworld.cpp  helloworld.sycl
examples/algorithms/sycl/: CMakeLists.txt
examples/algorithms/sycl/include/sycl/helloworld/: helloworld_algorithm.hpp
examples/cpu/: CMakeLists.txt  save_csv_data.cpp
examples/gpu/: CMakeLists.txt  sycl_ccl_usm_explicit_global.cpp  sycl_multi_event.cpp  sycl_multi_event_access.cpp  sycl_multi_event_basic.cpp  sycl_multi_event_explicit.cpp  sycl_multi_event_implicit.cpp
examples/run/cuda/: bench_seq_example_cuda.cpp
examples/run/openmp/: CMakeLists.txt  bench_par_example.cpp
examples/run/sycl/: CMakeLists.txt  bench_seq_example_sycl.sycl  seq_helloworld.cpp
io/include/binary/: binary_io.hpp
io/include/traccc/io/: bench_logger.hpp
